# libavpp

./: .gitignore  CMakeLists.txt  Makefile
examples/: CMakeLists.txt  filter-audio.cpp  hw-decode.cpp  util.cpp  vaapi-encode-mux.cpp  vaapi-encode.cpp  vaapi-scale.cpp  vaapi-transcode.cpp  video-player.cpp
include/: av.hpp
include/av/: Allocator.hpp  BufferSink.hpp  BufferSrc.hpp  CodecContext.hpp  Decoder.hpp  Encoder.hpp  Error.hpp  FilterContext.hpp  FilterGraph.hpp  FormatContext.hpp  Frame.hpp  HWDeviceContext.hpp  HWFramesContext.hpp  MediaFileReader.hpp  MediaReader.hpp  MediaWriter.hpp  Resampler.hpp  Scaler.hpp  Stream.hpp  StreamDecoder.hpp  SwScaler.hpp  Util.hpp
src/av/: Util.cpp
src/tests/: audio-player.cpp  display-attached-pic.cpp  util.cpp  video-player.cpp
tests/: CMakeLists.txt  audio-player.cpp  display-attached-pic.cpp  hwdec-video-player.cpp  play-audio.cpp  util.cpp  util.hpp  vaapi-encode-mux.cpp  vaapi-encode.cpp  vaapi-transcode.cpp  video-player.cpp
