cmake_minimum_required(VERSION 3.16)
project(libavpp LANGUAGES CXX)
cmake_policy(SET CMP0135 NEW)
cmake_policy(SET CMP0167 NEW)

set(BUILD_SHARED_LIBS OFF)
set(CMAKE_CXX_STANDARD 23)
set(FFMPEG_LIBS avfilter avformat avcodec avutil swresample swscale)

option(LIBAVPP_BUILD_TESTS "Build libavpp test programs" ON)

foreach(lib IN LISTS FFMPEG_LIBS)
    find_library(${lib} NAMES ${lib} REQUIRED)
endforeach()

add_library(libavpp INTERFACE)
target_include_directories(libavpp INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(libavpp INTERFACE ${FFMPEG_LIBS})

if(LIBAVPP_BUILD_TESTS)
    include(FetchContent)
    set(SFML_BUILD_AUDIO OFF)
    set(SFML_BUILD_NETWORK OFF)
    FetchContent_Declare(SFML URL https://github.com/SFML/SFML/archive/3.0.0.zip)
    FetchContent_Declare(portaudio-pp URL https://github.com/trustytrojan/portaudio-pp/archive/main.zip)
    FetchContent_MakeAvailable(SFML portaudio-pp)

    set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
    include_directories(include ${portaudio-pp_SOURCE_DIR}/include)
    link_libraries(${FFMPEG_LIBS} sfml-graphics portaudio)
    add_executable(audio-player src/tests/audio-player.cpp)
    add_executable(display-attached-pic src/tests/display-attached-pic.cpp)
    add_executable(video-player src/tests/video-player.cpp)
	add_executable(vaapi-encode src/tests/vaapi-encode.cpp)
endif()
