include(FetchContent)
set(SFML_BUILD_AUDIO OFF)
set(SFML_BUILD_NETWORK OFF)
FetchContent_Declare(SFML URL https://github.com/SFML/SFML/archive/3.0.0.zip)
FetchContent_Declare(portaudio-pp URL https://github.com/trustytrojan/portaudio-pp/archive/main.zip)
FetchContent_MakeAvailable(SFML portaudio-pp)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
include_directories(${portaudio-pp_SOURCE_DIR}/include)
link_libraries(libavpp sfml-graphics portaudio)
add_executable(audio-player audio-player.cpp)
add_executable(display-attached-pic display-attached-pic.cpp)
add_executable(video-player video-player.cpp)
add_executable(vaapi-encode vaapi-encode.cpp)
add_executable(vaapi-transcode vaapi-transcode.cpp)
